test/functions/jplevyak/zeroarity-bound-error-2.good
error: '_tmp' has no type
zeroarity-bound-error-2.chpl:9: illegal call argument type 'stdout' illegal: ( file ) 
zeroarity-bound-error-2.chpl:9: illegal call argument type '_tmp' illegal: ( ) 
zeroarity-bound-error-2.chpl:9: unresolved call 'fwrite'
note: candidates are:
_chpl_file.chpl:187: fwrite, f : file, val : int64
_chpl_file.chpl:220: fwrite, f : file, val : uint64
_chpl_file.chpl:253: fwrite, f : file, val : float64
_chpl_file.chpl:273: fwrite, f : file, val : string
_chpl_file.chpl:304: fwrite, f : file, val : bool
_chpl_file.chpl:322: fwrite, f : file, x : nil_type
_chpl_complex.chpl:8: fwrite, f : file, x : complex
_chpl_htuple.chpl:18: fwrite, f : file, x : _tuple
_chpl_htuple.chpl:45: fwrite, f : file, x : _htuple
_chpl_adomain.chpl:272: fwrite, f : file, x : _adomain
_chpl_adomain.chpl:279: fwrite, f : file, x : _aarray
_chpl_indefinite.chpl:132: fwrite, f : file, x : _idomain
_chpl_indefinite.chpl:139: fwrite, f : file, x : _iarray
_chpl_sparse.chpl:16: fwrite, f : file, x : _sarray
_chpl_seq.chpl:150: fwrite, f : file, s : seq
_chpl_seq.chpl:199: fwrite, f : file, s : _aseq
prelude.chpl:3: fwrite, f : file, val : object
prelude.chpl:4: fwrite, f : file, val : value
prelude.chpl:10: fwrite, f : file, val : CFILEPTR
_chpl_base.chpl:3: fwrite, f : file, val : _unused_class
_chpl_base.chpl:9: fwrite, f : file, val : _methodTokenType
_chpl_base.chpl:11: fwrite, f : file, val : _setterTokenType
_chpl_base.chpl:83: fwrite, f : file, val : _ddata
_chpl_closure.chpl:1: fwrite, f : file, val : closure
_chpl_file.chpl:76: fwrite, f : file, val : file
_chpl_adomain.chpl:5: fwrite, f : file, val : _domain
_chpl_adomain.chpl:22: fwrite, f : file, val : _array
_chpl_sparse.chpl:1: fwrite, f : file, val : _sdomain
_chpl_seq.chpl:1: fwrite, f : file, val : _seqNode
_chpl_seq.chpl:236: fwrite, f : file, val : reduction
_chpl_seq.chpl:244: fwrite, f : file, val : sum
_chpl_seq.chpl:259: fwrite, f : file, val : max
zeroarity-bound-error-2.chpl:1: fwrite, f : file, val : C
zeroarity-bound-error-2.chpl:9: illegal call argument type expression illegal: ( int64 ) 
zeroarity-bound-error-2.chpl:9: expression has no type
zeroarity-bound-error-2.chpl:9: expression has no type
fail: program does not type
